--- a/day01/js/index.html
+++ b/day01/js/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Advent of Code 2019-12-01</title>
-  <script src="https://cdn.jsdelivr.net/npm/p5"></script>
+  <script src="../../lib/p5.min.js"></script>
   <script src="solution.js"></script>
 </head>
 
