--- a/day03/js/index.html
+++ b/day03/js/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Advent of Code 2019-12-03</title>
-  <script src="../../lib/p5.min.js"></script>
+  <script src="../../lib/p5old.min.js"></script>
+  <script src="../../lib/CCapture.all.min.js"></script>
   <script src="solution.js"></script>
 </head>
 
